Add logging and GlobalExceptionHandler